--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,9 @@
 [theme]
-base="dark"
-# primaryColor="#F63366"
-# backgroundColor="magenta"
+base="light"
+primaryColor="#FF6F61" 
+backgroundColor="#f0f2f6" 
+secondaryBackgroundColor="#ffffff"
+
 
 [server]
 runOnSave=true
