--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 streamlit
 pandas
-pymongo
-requests
-matplotlib
-plotly
 numpy
+pymongo
+plotly
+matplotlib
+
+# Core utilities/APIs which often need specific versions
+requests-cache==1.1.0  # (Use the version you used in development)
+retry-requests==1.0.0  # (Use the version you used in development)
+openmeteo-requests==1.1.0 # (Use the version you used in development)
+
+# Scientific and time series libraries
+scipy
+statsmodels
+scikit-learn
