--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,12 @@ numpy
 pymongo
 plotly
 matplotlib
-
-# Core utilities/APIs which often need specific versions
-requests-cache==1.1.0  # (Use the version you used in development)
-retry-requests==1.0.0  # (Use the version you used in development)
-openmeteo-requests==1.1.0 # (Use the version you used in development)
-
-# Scientific and time series libraries
 scipy
 statsmodels
 scikit-learn
+
+# Pin these networking libraries for stability
+requests>=2.31.0
+requests-cache>=1.1.0
+retry-requests==1.0.0 
+openmeteo-requests>=1.1.0
