--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ scipy
 statsmodels
 scikit-learn
 
-# Pin these networking libraries for stability
+# Pinning these networking libraries for stability
 requests>=2.31.0
 requests-cache>=1.1.0
 retry-requests>=1.0.4
